<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.myapplication.tonguedetection.UserInfo1">

    <!--  基础信息填写-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/UserInfo1_0"
            android:textColor="#000000"
            android:layout_gravity="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:autofillHints="null"
            android:hint="@string/UserInfo1_1"
            android:inputType="numberSigned"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/UserInfo1_2"
            android:textColor="#000000"
            android:layout_gravity="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginEnd="10dp"
            android:autofillHints="name"
            android:hint="@string/UserInfo1_3"
            android:inputType="text"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/UserInfo1_4"
            android:textColor="#000000"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/input3_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/UserInfo1_9"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/input3_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserInfo1_10"
                android:textSize="20sp" />
        </RadioGroup>
    </LinearLayout>


    <!--  医疗信息填写-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/UserInfo1_5"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/input4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/UserInfo1_12" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/UserInfo1_6"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/input5"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:spinnerMode="dropdown"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/UserInfo1_13" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginStart="10dp"
            android:text="@string/UserInfo1_11" />
    </LinearLayout>

</LinearLayout>